[IMP] fix bugs and improve schemes
